<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/home_linear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ssul"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/home_search_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_baseline_search"
            android:background="@drawable/no_color_button"
            android:layout_marginTop="15dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/light_purple">
    <GridLayout
        android:id="@+id/grid_button"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:padding="20dp"
        android:useDefaultMargins="true">
        <Button
            android:id="@+id/office_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/office"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/factory_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/factory"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/establishment_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/establishment"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/sports_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/sports"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/service_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/service"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/cleric_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/cleric"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/public_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/public_official"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/it_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/it"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/influencer_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/influencer"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/nurce_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/nurse"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/delivery_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:background="@color/purple"/>
        <Button
            android:id="@+id/ect_button"
            android:layout_width="103dp"
            android:layout_height="50dp"
            android:text="@string/ect"
            android:textColor="@color/white"
            android:background="@color/purple"/>
    </GridLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>