<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kr.co.ky.nicknamePackage.NickNameActivity">

    <EditText
        android:id="@+id/nick_edit"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:hint="@string/nick_write"/>

    <Button
        android:id="@+id/nick_set_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/nick_setting"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/purple"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/nick_overlap_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/overlap"
        android:textStyle="bold"
        android:textSize="20sp"
        android:background="@color/purple"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

</LinearLayout>