<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WriteActivity">

    <LinearLayout
        android:id="@+id/community_context_linear"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <EditText
            android:id="@+id/community_ssul_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/title_plz"/>
        <EditText
            android:id="@+id/community_ssul_context"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/context_plz"
            android:gravity="top"
            android:inputType="text" />

    </LinearLayout>

    <Button
        android:id="@+id/community_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sharing"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:textStyle="bold" />
</LinearLayout>