<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/job_cardview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/light_purple"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:id="@+id/find_job_cardview_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/find_job_cardview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/find_job_cardview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/find_job_cardview_office_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office_name"
            android:textSize="20sp"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/find_job_cardview_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context"
                android:textSize="20sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>