<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/detail_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_purple"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
        <TextView
            android:id="@+id/detail_cardview_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/detail_cardview_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp"
            android:textColor="@color/black"/>

            <TextView
                android:id="@+id/detail_cardview_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/context"
                android:textColor="@color/black"
                android:textSize="20sp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>