<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nick_frame"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/my_page_linear"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nick_name"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/nick_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/nick_setting"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_page_linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_page_linear">

        <Button
            android:id="@+id/nick_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:background="@color/purple"
            android:text="@string/nick_setting"
            android:padding="10dp"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/purple"
            android:text="@string/logout"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/my_page_frame"
        app:layout_constraintStart_toStartOf="@id/my_page_frame">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_writing"
            android:textStyle="bold"
            android:background="@color/purple_200"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:textStyle="bold"
            android:background="@color/purple"/>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/my_page_frame"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_page_linear2">

    </FrameLayout>
    </LinearLayout>
</FrameLayout>