<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfficeActivity">
    <LinearLayout
        android:id="@+id/office_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/office_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/office"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="5dp"/>
    <Button
        android:id="@+id/legend_office_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legend_post"
        android:textStyle="bold"
        android:background="@color/purple_700"
        android:textColor="@color/white" />
        <Button
            android:id="@+id/new_office_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_post"
            android:textStyle="bold"
            android:background="@color/purple"
            android:textColor="@color/white" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/office_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/office_linear"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabWrite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>