<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/job_cardview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardBackgroundColor="@color/light_purple"
        app:cardCornerRadius="4dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

        <ImageView
            android:id="@+id/card_image"
            android:layout_width="150dp"
            android:layout_height="150dp"/>

        <LinearLayout
            android:id="@+id/job_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/card_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
        </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                >

                <ImageView
                    android:id="@+id/like_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_favorite_border"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/like_count"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ImageView
                    android:id="@+id/chat_image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_chat_black"
                    app:layout_constraintStart_toEndOf="@+id/like_image"
                    app:layout_constraintTop_toTopOf="@+id/like_image"
                    android:layout_marginStart="10dp"/>


                <TextView
                    android:id="@+id/like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="@id/like_image"
                    app:layout_constraintEnd_toEndOf="@+id/like_image"
                    app:layout_constraintTop_toBottomOf="@+id/like_image"
                    android:text="@string/like_number"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@id/like_count"
                    app:layout_constraintTop_toBottomOf="@+id/chat_image"
                    android:text="@string/like_count"/>

                    <TextView
                        android:id="@+id/chat_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@id/chat_image"
                        app:layout_constraintEnd_toEndOf="@+id/chat_image"
                        app:layout_constraintTop_toBottomOf="@+id/chat_image"
                        android:text="@string/like_number"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@id/chat_count"
                        app:layout_constraintTop_toBottomOf="@+id/chat_image"
                        android:text="@string/like_count"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
