<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/community_linear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/community_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community"
            android:textStyle="bold"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/community_search_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:drawableStart="@drawable/ic_baseline_search"
            android:background="@drawable/no_color_button"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/community_linear2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/light_purple"
        app:layout_constraintTop_toBottomOf="@id/community_linear"
        app:layout_constraintStart_toStartOf="parent">
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/legend_community_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/legend_post"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@color/purple_700"
            android:textColor="@color/white" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/new_community_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/new_post"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:background="@color/purple_500"
            android:textColor="@color/white" />
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/community_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/community_linear2"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabWrite_community"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:fabCustomSize="50dp"
        app:srcCompat="@drawable/ic_add"
        android:backgroundTint="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp" />
</androidx.constraintlayout.widget.ConstraintLayout>